--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,3 +52,8 @@ jobs:
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
             aws-region: us-east-1
+            
+        name: Deploy to AWS Lambda with Zappa
+        run: |
+          source venv/bin/activate
+          zappa update dev  
