--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,9 +62,16 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-
+      - name: Crear y activar entorno virtual
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          echo "VIRTUAL_ENV=venv" >> $GITHUB_ENV
+          echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
       - name: Instalar Zappa y dependencias
-        run: pip install -r requirements.txt zappa
+        run: |
+          source venv/bin/activate
+          pip install -r requirements.txt zappa
 
       - name: Configurar credenciales de AWS
         run: |
@@ -74,7 +81,9 @@ jobs:
           echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
 
       - name: Desplegar en AWS con Zappa
-        run: zappa update dev
+        run: |
+          source venv/bin/activate
+          zappa update dev
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
