--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -75,10 +75,15 @@ jobs:
 
       - name: Configurar credenciales de AWS
         run: |
-          mkdir -p ~/.aws  # 🔹 Asegura que el directorio existe
+          mkdir -p ~/.aws
           echo "[default]" > ~/.aws/credentials
           echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
           echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+          echo "region=us-east-1" >> ~/.aws/credentials
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          export AWS_DEFAULT_REGION="us-east-1"
+
 
       - name: Verificar si la función Lambda ya existe
         id: check_lambda
