--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -100,13 +100,14 @@ jobs:
       - name: Desplegar con Zappa (deploy si no existe, update si ya existe)
         run: |
           source venv/bin/activate
-          if zappa status dev | grep -q "ACTIVE"; then
+          if zappa status dev 2>&1 | grep -q "ACTIVE\|deployed"; then
             echo "Aplicación ya desplegada, ejecutando update..."
             zappa update dev
           else
             echo "Aplicación no encontrada, ejecutando deploy..."
             zappa deploy dev
           fi
+
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
